Add basic styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,23 @@
 .App {
-  text-align: center;
+  height: 100vh;
+  background: url("https://source.unsplash.com/collection/1408037/1600x900")
+    no-repeat center / cover;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
+  position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  width: 400px;
+  min-height: 364px;
+  padding: 1rem;
+  border-radius: 5px;
+  box-shadow: 0 0px 10px #111;
+  mix-blend-mode: difference;
+  user-select: none;
 }
